Tue Mar  3 16:55:23 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: show selected ticket number at prompt.

Tue Mar  3 14:47:30 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* math.c (num2dbl_with_to_f): direct casting from Rational to double.
	  [Feature #10909]

	* test/ruby/test_math.rb: add tests for the above change.

Tue Mar  3 07:52:20 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/ruby/test_symbol.rb: avoid a false positive in AIX.

Tue Mar  3 00:59:39 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: set PRELOADENV in Solaris to avoid "wrong ELF class"
	  error. [Bug #10926] [ruby-dev:48888]
	* configure.in: set LIBPATHENV for 32-bit compile in Solaris
	  in addition to 64-bit.

Mon Mar  2 15:36:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: do not check _setjmp unless _longjmp is available,
	  so that configure results will not be changed by cache.

Mon Mar  2 14:44:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): restore unsigned type from
	  cached variable only if the target type is not available.

Mon Mar  2 13:04:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (sig_signame): return nil if the argument is a valid
	  signal number.

Mon Mar  2 12:05:04 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/net/ftp/test_ftp.rb (create_ftp_server): set SO_OOBINLINE
	  for receiving OOB data which is sended with MSG_OOB flag in
	  portable way. [Bug #10915] [ruby-dev:48885]
	* test/net/ftp/test_ftp.rb (test_abort, test_status): use gets
	  for receiving OOB data in portable way.

Mon Mar  2 11:43:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): restore unsigned type from
	  cached variable.

Mon Mar  2 06:01:41 2015  Eric Wong  <e@80x24.org>

	* ext/io/wait/wait.c (io_nread): wrap return value with INT2FIX
	  Thanks to Yura Sokolov <funny.falcon@gmail.com>
	  [ruby-core:68369] [Bug#10923]